# peek

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES.md  README.md
.github/workflows/: ci.yml
launch/: HN.md  reddit-commandline.md  reddit-localllama.md  tweet.md
scripts/: peek-pipe.sh
src/: ansi.rs  chunker.rs  daemon.rs  embed.rs  main.rs  redact.rs  store.rs  tmux.rs  tui.rs
video/: README.md  package-lock.json  package.json  tsconfig.json
video/src/: Root.tsx  Video.tsx  styles.ts
video/src/components/: Key.tsx  Terminal.tsx  Typewriter.tsx
video/src/scenes/: Demo.tsx  Hotkey.tsx  Outro.tsx  Pillars.tsx  Problem.tsx  TitleCard.tsx
