[package]
name = "peek"
version = "0.1.0"
edition = "2021"
description = "Cmd-K for your tmux scrollback. Local semantic search, sub-second."
license = "MIT"
repository = "https://github.com/theruknology/peek"
homepage = "https://github.com/theruknology/peek"
readme = "README.md"
keywords = ["tmux", "tui", "search", "semantic", "embeddings"]
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "peek"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
crossterm = "0.27"
ratatui = "0.26"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
arboard = "3"
vte = "0.13"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
nix = { version = "0.27", features = ["user"] }

[features]
default = []
# fastembed pulls in ORT/ONNX which is heavy and network-fetches the model.
# Off by default; enable via `--features embed`. Otherwise we use a
# deterministic hash-based bag-of-tokens vector — good enough as a stand-in
# for an MVP smoke test, swappable later. Documented in NOTES.md.
embed = ["dep:fastembed"]

[dependencies.fastembed]
version = "3"
optional = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
